--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -215,7 +215,7 @@ a.Social:last-child {
                 text-transform: uppercase;
 
 }
- img{
+ .portfolio .posts img{
     margin-top: 50px;
 }
 .portfolio .lable {
